# provider-catalog

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  database.py  main.py  models.py  schemas.py
backend/app/api/: deps.py
backend/app/api/routes/: compare.py  products.py  providers.py  search.py
backend/app/scripts/: load_catalog.py
backend/app/services/: search.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
frontend/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
